--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 </div>
 
 <footer class="text-center">
-    <p>Softala1 Kev√§t 2015 FrontEnd Template</p>
+    <p>Softala1 Kev‰t 2015 FrontEnd Template</p>
 </footer>
 
 </body>
