--- a/pages/login.html
+++ b/pages/login.html
@@ -4,12 +4,13 @@
 
 <head>
     <!-- SCROLLS -->
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" />
+    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" />
+    <link rel="stylesheet" href="../css/style.css" />
 
     <!-- SPELLS -->
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.min.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.js"></script>
     <script src="app/app.js"></script>
 </head>
 
@@ -18,15 +19,19 @@
 
 <div class="container">
 	<section class="row login">
-		<div class="col-xs-12 col-sm-6 col-md-4">
+		<div class="login--form col-xs-12 col-sm-6 col-sm-offset-3 col-md-6">
 			<form>
-				<h1>Kirjaudu Huuto‰‰nestykseen</h1>
+				<h2>Kirjaudu Huuto&shy;‰‰nestykseen</h2>
+				
 				<label for="username">K‰ytt‰j‰</label>
 				<input type="text" name="userid" id="username" placeholder="oppilasnumero@myy.haaga-helia.fi">
+				
 				<label for="password">Salasana</label>
 				<input type="text" name="password" id="password" placeholder="password">
+
+				<!-- Halutaanko "pysy kirjautuneena sis‰‰n"-toiminto? -->
 				<button>Kirjaudu</button>
-				<a href="index.html">T‰st‰ etusivulle</a>
+				<a href="../index.html">T‰st‰ etusivulle</a>
 			</form>
 		</div>
 	</section>
