lisätty meta-tagit ja korjattu skandit

--- a/pages/login.html
+++ b/pages/login.html
@@ -21,17 +21,17 @@
 	<section class="row login">
 		<div class="login--form col-xs-12 col-sm-6 col-sm-offset-3 col-md-6">
 			<form>
-				<h2>Kirjaudu Huuto&shy;‰‰nestykseen</h2>
+				<h2>Kirjaudu Huuto&shy;√§√§nestykseen</h2>
 				
-				<label for="username">K‰ytt‰j‰</label>
+				<label for="username">K√§ytt√§j√§</label>
 				<input type="text" name="userid" id="username" placeholder="oppilasnumero@myy.haaga-helia.fi">
 				
 				<label for="password">Salasana</label>
 				<input type="text" name="password" id="password" placeholder="password">
 
-				<!-- Halutaanko "pysy kirjautuneena sis‰‰n"-toiminto? -->
+				<!-- Halutaanko "pysy kirjautuneena sis√§√§n"-toiminto? -->
 				<button>Kirjaudu</button>
-				<a href="../index.html">T‰st‰ etusivulle</a>
+				<a href="../index.html">T√§st√§ etusivulle</a>
 			</form>
 		</div>
 	</section>
