Login refartor to angular routing

--- a/pages/login.html
+++ b/pages/login.html
@@ -24,7 +24,7 @@
 <!-- define angular controller -->
 <body>
 
-<div class="container">
+<div class="login-container">
 	<section class="row login">
 		<div class="login--form text-center col-xs-12 col-sm-6 col-sm-offset-3">
 			<form>
